--- a/audio_effects.conf
+++ b/audio_effects.conf
@@ -6,6 +6,7 @@
 #        }
 #    }
 libraries {
+  
 # This is a proxy library that will be an abstraction for
 # the HW and SW effects
 
@@ -22,6 +23,11 @@ libraries {
   #libHW {
     #path /system/lib/soundfx/libhwwrapper.so
   #}
+  
+  #Viper4android library
+  v4a_fx {
+  path /system/lib/soundfx/libv4a_fx_ics.so
+  }
 
   bundle {
     path /system/lib/soundfx/libbundlewrapper.so
@@ -84,6 +90,12 @@ effects {
          #uuid  zzzzzzzz-zzzz-zzzz-zzzz-zzzzzzzzzzzz
       #}End of HW effect
   #} End of effect proxy
+  
+  # Viper4android effects
+  v4a_standard_fx {
+    library v4a_fx
+    uuid 41d3c987-e6cf-11e3-a88a-11aba5d5c51b
+  }
 
   bassboost {
     library bundle
