--- a/audio_effects.conf
+++ b/audio_effects.conf
@@ -6,7 +6,7 @@
 #        }
 #    }
 libraries {
-  
+
 # This is a proxy library that will be an abstraction for
 # the HW and SW effects
 
@@ -23,7 +23,7 @@ libraries {
   #libHW {
     #path /system/lib/soundfx/libhwwrapper.so
   #}
-  
+
   #Viper4android library
   v4a_fx {
   path /system/lib/soundfx/libv4a_fx_ics.so
@@ -90,7 +90,7 @@ effects {
          #uuid  zzzzzzzz-zzzz-zzzz-zzzz-zzzzzzzzzzzz
       #}End of HW effect
   #} End of effect proxy
-  
+
   # Viper4android effects
   v4a_standard_fx {
     library v4a_fx
@@ -195,6 +195,19 @@ effects {
 #        ...
 #    }
 
-#
-# TODO: add default audio pre processor configurations after debug and tuning phase
-#
+pre_processing {
+
+    voice_communication {
+        agc {}
+        ns {}
+        aec {}
+    }
+}
+
+
+output_session_processing {
+    voice_call {
+        fens {}
+        lmfv {}
+    }
+}
